# advent-of-code

2020/: .gitignore  aoc2020.cabal
2020/days/: day01.hs  day02.hs  day08.hs
2021/: .gitignore  package-lock.json  package.json
2021/day01/: index.js
2021/day02/: index.js
2021/day03/: index.js
2021/day04/: index.js
2021/day05/: index.js
2021/day06/: index.js
2021/day07/: index.js
2023/: aoc2023.cabal
2023/days/: day01.hs  day02.hs  day03.hs
