cabal-version:       >=1.10

name:                aoc2020 
version:             0.1.0.0
build-type:          Simple

executable day01
  main-is:             days/day01.hs
  build-depends:       base >=4.15 && <4.16, megaparsec >=9.2.0 && < 9.2.1, text
  default-language:    Haskell2010

executable day02
  main-is:             days/day02.hs
  build-depends:       base >=4.15 && <4.16, megaparsec >=9.2.0 && < 9.2.1, text
  default-language:    Haskell2010

executable day08
  main-is:             days/day08.hs
  build-depends:       base >=4.15 && <4.16, 
                       megaparsec >=9.2.0 && < 9.2.1,
                       text, vector >= 0.12.1.2,
                       containers >= 0.6.0.1
  default-language:    Haskell2010
